--- a/AuthServer/package.json
+++ b/AuthServer/package.json
@@ -12,6 +12,13 @@
     "bootstrap": "^4.0.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "css-loader": "^0.28.10",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.7",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.10"
   }
