--- a/AuthServer/AuthServer.csproj
+++ b/AuthServer/AuthServer.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Content Include="Content\Styles\Vendor.scss" />
   </ItemGroup>
 
   <ItemGroup>
