--- a/AuthServer/package.json
+++ b/AuthServer/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.0.0",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
