--- a/AuthServer/package.json
+++ b/AuthServer/package.json
@@ -13,9 +13,8 @@
     "bootstrap": "^4.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
-    "popper.js": "^1.12.9"
-  },
-  "devDependencies": {
+    "popper.js": "^1.12.9",
+
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
