--- a/AuthServer/package.json
+++ b/AuthServer/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean": "rimraf wwwroot", 
+    "clean": "rimraf wwwroot",
     "build": "webpack"
   },
   "author": "",
@@ -13,17 +13,19 @@
     "bootstrap": "^4.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
-    "popper.js": "^1.12.9",
-
+    "popper.js": "^1.12.9"
+  },
+  "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
     "node-sass": "^4.7.2",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
     "webpack": "^3.5.6",
-    "webpack-cli": "^2.0.10"
+    "webpack-cli": "^2.0.11"
   }
 }
