renamed HomeController to LogonController and added RegisterController

--- a/AuthServer/AuthServer.csproj
+++ b/AuthServer/AuthServer.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <Folder Include="Content\Scripts\Logon\" />
+    <Folder Include="Models\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
