--- a/AuthServer/package.json
+++ b/AuthServer/package.json
@@ -22,9 +22,12 @@
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
+    "knockout": "^3.5.0-beta",
     "node-sass": "^4.7.2",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
+    "ts-loader": "3.5.0",
+    "typescript": "^2.7.2",
     "webpack": "^3.5.6",
     "webpack-cli": "^2.0.11"
   }
