--- a/AuthServer/package.json
+++ b/AuthServer/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.10",
+    "expose-loader": "^0.7.5",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "knockout": "^3.5.0-beta",
